Fix padding on h2 to avoid overlapping elements above.

--- a/src/styl/_post.styl
+++ b/src/styl/_post.styl
@@ -19,7 +19,7 @@ $padding-title-header
         display block
     p, h1, h2, h3, h4,ul,ol, .tags, iframe, .button-post
         center(rem(800px))
-        padding 0 rem(20px)
+        padding rem(1px) rem(20px)
         margin 0 auto rem(30px)
         mainFont(300)
         font-size rem(18px)
